--- a/my-website/src/Tab.css
+++ b/my-website/src/Tab.css
@@ -1,3 +1,12 @@
 /*.sidebar-tab {
   font-family: 'Gaegu', sans-serif;
 }*/
+
+.sidebar-tab {
+  cursor: pointer;
+  transition: all 0.5s ease 0s;
+}
+
+.sidebar-tab:hover {
+  opacity: 0.6;
+}
