--- a/my-website/src/App.css
+++ b/my-website/src/App.css
@@ -12,7 +12,6 @@
   background-color: #141f38;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -21,6 +20,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.tabs-container {
+  margin: 10px;
 }
 
 /*@keyframes App-logo-spin {
