--- a/my-website/src/Box.css
+++ b/my-website/src/Box.css
@@ -35,17 +35,30 @@
 .content-window-main-wrapper {
   max-width: 68vmin;
   height: 68vmin;
-  background-color: rgb(255,255,255,0.05);
+  /*background-color: rgb(255,255,255,0.15);*/
   border-radius: 6px;
   padding: 10px;
   margin: 10px;
   flex-grow: 1;
   text-align: left;
+  /*background-image: url("a1.png");*/
+  background-size: cover;
 }
 
 .main-text {
   padding: 10px 2px;
-  font-size: 20px;
+  font-size: 3.5vmin;
   color: #ffffff;
   line-height: 1.4;
+}
+
+a {
+  color: #ededed;
+  text-decoration: none;
+  font-weight: 600;
+  transition: all 0.5s ease 0s;
+}
+
+a:hover {
+  color: #a2caef;
 }
