--- a/my-website/src/App.css
+++ b/my-website/src/App.css
@@ -28,6 +28,11 @@
   display: flex;
 }
 
+.credits {
+  font-size: 3vmin;
+  opacity: 0.8;
+}
+
 ::selection {
   background: rgb(255,255,255,0.3);
 }
