--- a/my-website/src/Box.css
+++ b/my-website/src/Box.css
@@ -27,7 +27,7 @@
 
 .content-window-header-bar {
   text-transform: uppercase;
-  font-size: 3.4vmin;
+  font-size: 3.35vmin;
   padding: 1vmin 1.3vmin 0.1vmin;
   color: #a2caef;
   opacity: 0.93;
@@ -36,10 +36,10 @@
 }
 
 .content-window-main-wrapper {
-  width: 48.5vmin;
-  max-width: 48.5vmin;
-  height: 48.5vmin;
-  border-radius: 2vmin;
+  width: 58vmin;
+  max-width: 58vmin;
+  height: 58vmin;
+  border-radius: 2.5vmin;
   padding: 1vmin;
   margin: 1vmin;
   flex-grow: 1;
@@ -50,21 +50,21 @@
 
 .main-text {
   padding: 1vmin 1.3vmin;
-  font-size: 2.5vmin;
+  font-size: 3vmin;
   color: #ffffff;
   line-height: 1.4;
 }
 
 .subtitle {
   padding: 0vmin 1.3vmin;
-  font-size: 2.9vmin;
+  font-size: 3.2vmin;
   color: #ffffff;
   font-weight: 600;
 }
 
 .date {
   padding: 0vmin 1.3vmin;
-  font-size: 2.5vmin;
+  font-size: 3vmin;
   color: #ffffff; 
   opacity: 0.7;
 }
@@ -76,7 +76,7 @@ ul {
 
 .footer {
   padding: 2vmin;
-  font-size: 2.5vmin;
+  font-size: 3vmin;
   color: #ffffff;
   line-height: 1.4;
 }
@@ -85,17 +85,17 @@ ul {
   display: flex;
 }
 
-.icon-container {
-  height: 7vmin;
-  width: 7vmin;
-}
+/*.icon-container {
+  height: 8vmin;
+  width: 8vmin;
+}*/
 
 .icon {
   border-radius: 50%;
   flex-grow: 0;
   transition: all 0.4s ease 0s;
   display: inline-block;
-  width: 3vmin;
+  width: 4vmin;
   fill: #ffffff;
   cursor: pointer;
   margin-right: 2vmin;
@@ -111,12 +111,13 @@ ul {
 }
 
 a {
-  color: #ededed;
+  /*color: #a2caef;*/
+  color: #a5d4ff;
   text-decoration: none;
   font-weight: 600;
   transition: all 0.5s ease 0s;
 }
 
 a:hover {
-  color: #a2caef;
+  opacity: 0.8;
 }
