--- a/my-website/src/App.css
+++ b/my-website/src/App.css
@@ -1,12 +1,17 @@
+@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
+
 .App {
   text-align: center;
   font-family: 'Gaegu', sans-serif;
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: bottom left;
 }
-
-/*.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}*/
 
 .App-header {
   background-color: #141f38;
