--- a/my-website/src/Box.css
+++ b/my-website/src/Box.css
@@ -27,7 +27,7 @@
 
 .content-window-header-bar {
   text-transform: uppercase;
-  font-size: 3.35vmin;
+  font-size: 3.1vmin;
   padding: 1vmin 1.3vmin 0.1vmin;
   color: #a2caef;
   opacity: 0.93;
@@ -40,7 +40,7 @@
   max-width: 58vmin;
   height: 58vmin;
   border-radius: 2.5vmin;
-  padding: 1vmin;
+  padding: 1.1vmin;
   margin: 1vmin;
   flex-grow: 1;
   text-align: left;
@@ -50,21 +50,21 @@
 
 .main-text {
   padding: 1vmin 1.3vmin;
-  font-size: 3vmin;
+  font-size: 2.55vmin;
   color: #ffffff;
   line-height: 1.4;
 }
 
 .subtitle {
   padding: 0vmin 1.3vmin;
-  font-size: 3.2vmin;
+  font-size: 2.8vmin;
   color: #ffffff;
   font-weight: 600;
 }
 
 .date {
   padding: 0vmin 1.3vmin;
-  font-size: 3vmin;
+  font-size: 2.5vmin;
   color: #ffffff; 
   opacity: 0.7;
 }
@@ -76,7 +76,7 @@ ul {
 
 .footer {
   padding: 2vmin;
-  font-size: 3vmin;
+  font-size: 2.6vmin;
   color: #ffffff;
   line-height: 1.4;
 }
@@ -95,7 +95,7 @@ ul {
   flex-grow: 0;
   transition: all 0.4s ease 0s;
   display: inline-block;
-  width: 4vmin;
+  width: 3.1vmin;
   fill: #ffffff;
   cursor: pointer;
   margin-right: 2vmin;
@@ -112,7 +112,7 @@ ul {
 
 a {
   /*color: #a2caef;*/
-  color: #a5d4ff;
+  color: #c4e3ff;
   text-decoration: none;
   font-weight: 600;
   transition: all 0.5s ease 0s;
