--- a/my-website/src/App.css
+++ b/my-website/src/App.css
@@ -14,8 +14,9 @@
   }
 
   .big-text {
-    font-size: 10em;
+    font-size: 10.5em;
     cursor: pointer;
+    margin: 0 0.05em;
   }
 
   .App-header {
@@ -30,7 +31,10 @@
   }
 
   .contents-container {
-    margin-top: 5.5em;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0;
   }
 
   /*  .tabs-container {
@@ -83,35 +87,44 @@
 
 @media (min-width:481px) {
   /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+  .big-text {
+    font-size: 12em;
+    margin: 0 0.07em;
+  }
 }
 
 @media (min-width:641px) {
   /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-  .App-header {
-    font-size: 1.5em;
+  .big-text {
+    font-size: 12.5em;
+    margin: 0 0.09em;
   }
 }
 
 @media (min-width:961px) {
   /* tablet, landscape iPad, lo-res laptops and desktops */
+  .big-text {
+    font-size: 14em;
+    margin: 0 0.15em;
+  }
 }
 
 @media (min-width:1025px) {
   /* big landscape tablets, laptops, and desktops */
+  .big-text {
+    font-size: 14.3em;
+    margin: 0 0.19em;
+  }
 }
 
 @media (min-width:1281px) {
   /* hi-res laptops and desktops */
-  .App {
-    background-size: cover;
-  }
-
   .App-header {
     justify-content: center;
   }
 
   .big-text {
-    font-size: 14.5em;
+    font-size: 16em;
     margin: 0 0.24em;
   }
 
